--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
                         <input type="checkbox" id="nav-icon" hidden>
                         <ul class="justify-content-center align-items-center d-flex gap30 display">
                             <li>
-                                <a href="#HOME" class="nav-link">
+                                <a href="#HOME" class="nav-link fw-normal">
                                     HOME
                                 </a>
                             </li>
                             <li>
-                                <a href="" class="nav-link">
+                                <a href="" class="nav-link fw-normal">
                                     EVENTS
                                 </a>
                             </li>
                             <li>
-                                <a href="" class="nav-link">
+                                <a href="" class="nav-link fw-normal">
                                     FEED
                                 </a>
                             </li>
                             <li>
-                                <a href="" class="nav-link">
+                                <a href="" class="nav-link fw-normal">
                                     USER NAME
                                 </a>
                             </li>
@@ -71,9 +71,10 @@
                 </div>
                 <div class="col-lg-8 col-12">
                     <div class="text-box">
-                        <p class="home">Home > Feed</p>
+                        <p class="home fw-normal">Home > Feed</p>
                         <h3 class="jone">Jhone Doe</h3>
-                        <p class="sec-1-dictumst">Dictumst vulputate eget quisque iaculis hendrerit quis ut fringilla.
+                        <p class="sec-1-dictumst fw-normal">Dictumst vulputate eget quisque iaculis hendrerit quis ut
+                            fringilla.
                             Senectus gravida sed interdum pretium at quam
                             morbi. Nunc, libero nam cursus sem faucibus urna. Hendrerit vulputate in duis donec sit. Ut
                             vitae dolor fringilla urna
@@ -86,7 +87,7 @@
                                     <img src="./assest/images/partyimg.png" alt="event" class="event-png">
                                     <div class="event-text">
                                         <p class="auage">Augue etiam</p>
-                                        <p class="quis">Quis et id urna sagittis.Enim lacus, felis, libero
+                                        <p class="quis fw-normal">Quis et id urna sagittis.Enim lacus, felis, libero
                                             sed nisl vitae blandit sociis.</p>
                                     </div>
                                 </div>
@@ -94,7 +95,7 @@
                                     <img src="/assest/images/party-img-2.png" alt="event" class="event-png">
                                     <div class="event-text">
                                         <p class="auage">Augue etiam</p>
-                                        <p class="quis">Quis et id urna sagittis. Enim lacus, felis, libero
+                                        <p class="quis fw-normal">Quis et id urna sagittis. Enim lacus, felis, libero
                                             sed nisl vitae blandit sociis.</p>
                                     </div>
                                 </div>
@@ -134,7 +135,7 @@
                             <img src="./assest/images/username-pic1.png" alt="user" class="user-one">
                             <div class="">
                                 <p class="user ml-12">Username</p>
-                                <p class="event-name ml-12">Post event name</p>
+                                <p class="event-name  fw-normal ">Post event name</p>
                             </div>
                         </div>
                         <p class="fuce">Fusce adipiscing nunc et tellus eu, tristique<br>sodales sit aliquet.</p>
@@ -875,19 +876,19 @@
                 <div class="col-12 col-lg-7">
                     <div class="row">
                         <div class="col-6 col-sm-3 pt-50">
-                            <h2 class="col-3-head">SERVICES</h2>
-                            <p class="col-3-text ">News</p>
-                            <p class="col-3-text ">ullamcorper</p>
-                            <p class="col-3-text ">Contact</p>
-                            <p class="col-3-text ">About</p>
+                            <h2 class="fotter-head gap12">SERVICES</h2>
+                            <p class="fotter-text gap12">News</p>
+                            <p class="fotter-text gap12">ullamcorper</p>
+                            <p class="fotter-text gap12">Contact</p>
+                            <p class="fotter-text gap12">About</p>
 
                         </div>
                         <div class="col-6 col-sm-3 pt-50">
-                            <h2 class="col-3-head">EVENTS</h2>
-                            <p class="col-3-text">ullamcorper</p>
-                            <p class="col-3-text">ullamcorper</p>
-                            <p class="col-3-text">ullamcorper</p>
-                            <p class="col-3-text">ullamcorper</p>
+                            <h2 class="fotter-head gap12">EVENTS</h2>
+                            <p class="fotter-text gap12">ullamcorper</p>
+                            <p class="fotter-text gap12">ullamcorper</p>
+                            <p class="fotter-text gap12">ullamcorper</p>
+                            <p class="fotter-text gap12">ullamcorper</p>
 
                         </div>
                         <div class="col-12 col-sm-6">
